syntax = "proto3";

package tragedylooper.v1;

import "tragedylooper/v1/ability.proto";
import "tragedylooper/v1/enums.proto";

option go_package = "github.com/constellation39/tragedyLooper/pkg/proto/v1";

// CharacterConfig 定义了全局角色库中角色的配置。
message CharacterConfig {
  // 角色的唯一标识符。
  int32 id = 1;
  // 角色的名称。
  string name = 2;
  // 角色特征列表（例如，“学生”，“记者”）。
  repeated string traits = 3;
  // 角色的属性上限。
  map<int32, int32> stat_limits = 4;
  // 角色拥有的能力ID列表。
  repeated AbilityConfig abilities = 7;
  // 角色的特殊规则列表。
  repeated CharacterRule rules = 8;
  // 角色的描述。
  string description = 9;
  // 角色的初始位置。
  LocationType initial_location = 10;
  // 角色不能进入的地点列表。
  repeated LocationType blocked_locations = 11;
}

// Character 定义了运行时的角色实例。
message Character {
  // 角色的配置。
  CharacterConfig config = 1;
  // 角色的当前位置。
  LocationType current_location = 2;
  // 角色的当前属性水平。
  map<int32, int32> stats = 3;
  // 角色的隐藏角色（由剧本分配）。
  int32 hidden_role_id = 6;
  // 角色拥有的能力实例列表。
  repeated Ability abilities = 7;
  // 角色是否存活。
  bool is_alive = 8;
  // 角色是否处于恐慌状态。
  bool in_panic_mode = 9;
  // 角色的动态特征列表。
  repeated string traits = 10;
}

// CharacterRule 定义了角色的特殊规则。
message CharacterRule {
  // 规则的名称。
  string name = 1;
  // 规则的描述。
  string description = 2;
  // 规则的触发器。
  TriggerType trigger = 3;
  // 规则的效果。
  oneof effect {
    // 地盘选择效果。
    TurfSelectionEffect turf_selection_effect = 4;
    // 延迟进入效果。
    DelayedEntryEffect delayed_entry_effect = 5;
    // 特殊移动规则。
    SpecialMovementRule special_movement_rule = 6;
  }
}

// TurfSelectionEffect 定义了选择地盘的效果。
message TurfSelectionEffect {
  // 可供选择的地点列表。
  repeated LocationType possible_locations = 1;
  // 显示给玩家的提示。
  string prompt = 2;
}

// DelayedEntryEffect 定义了延迟进入的效果。
message DelayedEntryEffect {
  // 进入的日期。
  int32 day_of_entry = 1;
  // 进入的地点。
  LocationType entry_location = 2;
}

// SpecialMovementRule 定义了特殊移动规则。
message SpecialMovementRule {
  // 受限地点列表。
  repeated LocationType restricted_locations = 1;
  // 规则的描述。
  string description = 2;
}
